update translation of books/porters-handbook to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53720

--- a/documentation/content/ru/books/porters-handbook/order/_index.po
+++ b/documentation/content/ru/books/porters-handbook/order/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-26 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksporters-handbookorder_index/ru/>\n"
@@ -550,7 +550,7 @@ msgid ""
 msgstr ""
 "Порядок не важен, однако старайтесь держать схожие переменные вместе. "
 "Например, переменные uid и gid `USERS` и `GROUPS`. Конфигурационные "
-"переменные `CONFIGURE_*` и `*_CONFIGURE`. Списки файлов и директорий "
+"переменные `CONFIGURE_*` и `*_CONFIGURE`. Списки файлов и каталогов "
 "`PORTDOCS` и `PORTEXAMPLES`."
 
 #. type: Title ==
