--- a/documentation/content/ru/books/porters-handbook/plist/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/plist/_index.adoc
@@ -125,7 +125,7 @@ post-install:
 	${MKDIR} ${STAGEDIR}${PREFIX}/some/directory
 ....
 
-Добавьте директорию в [.filename]#pkg-plist# так же, как и любую другую. Например:
+Добавьте каталог в [.filename]#pkg-plist# так же, как и любой другой. Например:
 
 [.programlisting]
 ....
@@ -385,7 +385,7 @@ bin/machine-build
 Раскрывается до последнего извлеченного имени файла (как указано). В примере [.filename]#bin/emacs#.
 
 `%D`::
-Раскрыть до текущего префикса директории, установленного с помощью `@cwd`. В этом примере [.filename]#/usr/local#.
+Раскрыть до текущего префикса каталога, установленного с помощью `@cwd`. В этом примере [.filename]#/usr/local#.
 
 `%B`::
 Раскрыть до базового имени полного имени файла, то есть префикс текущего каталога плюс последняя спецификация файла, за вычетом имени файла в конце спецификации. В данном примере это будет [.filename]#/usr/local/bin#.
@@ -540,7 +540,7 @@ actions: [file(1)]
 [example]
 ====
 
-Это ключевое слово выполняет две функции: добавляет строку `@dirrmtry _directory_` в список упаковки и сообщает о том, что директория удаляется при деинсталляции пакета.
+Это ключевое слово выполняет две функции: добавляет строку `@dirrmtry _directory_` в список упаковки и сообщает о том, что каталог удаляется при деинсталляции пакета.
 
 [.programlisting]
 ....
