--- a/documentation/content/ru/books/porters-handbook/plist/_index.po
+++ b/documentation/content/ru/books/porters-handbook/plist/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-21 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksporters-handbookplist_index/ru/>\n"
@@ -315,7 +315,7 @@ msgstr ""
 msgid ""
 "Add the directory to [.filename]#pkg-plist# like any other.  For example:"
 msgstr ""
-"Добавьте директорию в [.filename]#pkg-plist# так же, как и любую другую. "
+"Добавьте каталог в [.filename]#pkg-plist# так же, как и любой другой. "
 "Например:"
 
 #. type: delimited block . 4
@@ -1108,7 +1108,7 @@ msgid ""
 "Expand to the current directory prefix, as set with `@cwd`.  In the example "
 "case [.filename]#/usr/local#."
 msgstr ""
-"Раскрыть до текущего префикса директории, установленного с помощью `@cwd`. В "
+"Раскрыть до текущего префикса каталога, установленного с помощью `@cwd`. В "
 "этом примере [.filename]#/usr/local#."
 
 #. type: Labeled list
@@ -1605,8 +1605,8 @@ msgid ""
 "deinstalling the package."
 msgstr ""
 "Это ключевое слово выполняет две функции: добавляет строку `@dirrmtry "
-"_directory_` в список упаковки и сообщает о том, что директория удаляется "
-"при деинсталляции пакета."
+"_directory_` в список упаковки и сообщает о том, что каталог удаляется при "
+"деинсталляции пакета."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/plist/_index.adoc:637
