--- a/documentation/content/ru/books/porters-handbook/porting-dads/_index.po
+++ b/documentation/content/ru/books/porters-handbook/porting-dads/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksporters-handbookporting-dads_index/ru/>\n"
@@ -748,7 +748,7 @@ msgstr ""
 "[.filename]#Makefile# порта. Значения следующих `make`-переменных будут "
 "причиной, возвращаемой пользователям, по которой порт отказывает в "
 "установке. Пожалуйста, используйте корректные `make`-переменные, так как "
-"каждая переменная make передает абсолютно различный смысл как для "
+"каждая переменная make передаёт абсолютно различный смысл как для "
 "пользователей, так и для автоматизированных систем, которые полагаются на "
 "файлы [.filename]#Makefile#, таких как crossref:keeping-up[build-"
 "cluster,кластер построения портов], crossref:keeping-"
