--- a/documentation/content/ru/books/porters-handbook/slow-porting/_index.po
+++ b/documentation/content/ru/books/porters-handbook/slow-porting/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-31 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksporters-handbookslow-porting_index/ru/>\n"
@@ -310,7 +310,7 @@ msgid ""
 msgstr ""
 "Если вы не можете найти FTP/HTTP сайт с хорошим подключением к сети, или "
 "находите только сайты, которые имеют раздражающе нестандартные форматы, то "
-"можете захотеть поместить копию на надежный сервер FTP или HTTP, который вам "
+"можете захотеть поместить копию на надёжный сервер FTP или HTTP, который вам "
 "доступен (например, ваша домашняя страница)."
 
 #. type: Plain text
@@ -899,7 +899,7 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/slow-porting/_index.adoc:323
 #, no-wrap
 msgid "Using `EXTRA_PATCHES` With a Directory"
-msgstr "Использование `EXTRA_PATCHES` с директорией"
+msgstr "Использование `EXTRA_PATCHES` с каталогом"
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/slow-porting/_index.adoc:328
@@ -909,8 +909,8 @@ msgid ""
 "automatically apply all files named [.filename]#patch-*# in it."
 msgstr ""
 "Иногда для функции требуется множество патчей, в таком случае можно указать "
-"`EXTRA_PATCHES` на директорию, и все файлы с именем [.filename]#patch-*# в "
-"ней будут применены автоматически."
+"`EXTRA_PATCHES` на каталог, и все файлы с именем [.filename]#patch-*# в нём "
+"будут применены автоматически."
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/slow-porting/_index.adoc:331
