--- a/documentation/content/ru/books/porters-handbook/upgrading/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/upgrading/_index.adoc
@@ -74,11 +74,11 @@ endif::[]
 
 Для упрощения стандартных операций с файлами исправлений используйте `make makepatch`, как описано в разделе crossref:slow-porting[slow-patch,Работа с патчами]. Существуют и другие инструменты, например [.filename]#/usr/ports/Tools/scripts/patchtool.py#. Перед его использованием прочтите [.filename]#/usr/ports/Tools/scripts/README.patchtool#.
 
-Если порт никем не поддерживается, а вы активно его используете, пожалуйста, подумайте над тем, чтобы добровольно стать его сопровождающим. Во FreeBSD имеется более 4000 портов без поддержки, и это как раз та область, где всегда нужны добровольцы. (Детальное описание обязанностей сопровождающего можно найти в разделе extref:{developers-handbook}[Руководства Разработчика, POLICIES-MAINTAINER].)
+Если порт никем не поддерживается и активно используется, пожалуйста, подумайте над тем, чтобы добровольно стать его сопровождающим. Во FreeBSD имеется более 4000 портов без поддержки, и это как раз та область, где всегда нужны добровольцы. (Детальное описание обязанностей сопровождающего можно найти в разделе extref:{developers-handbook}policies[Руководства Разработчика, policies-maintainer].)
 
 Для отправки diff используйте https://bugs.freebsd.org/submit/[форму отправки багов] (продукт `Ports & Packages`, компонент `Individual Port(s)`). Всегда указывайте категорию с именем порта, за которой следует двоеточие и краткое описание проблемы. Примеры: `_категория/имя_порта_: _добавить опцию FOO_`; `_категория/имя_порта_: _Обновление до X.Y_`. Упоминайте в сообщении все добавленные или удалённые файлы, так как они должны быть явно указаны в man:git[1] при выполнении коммита. Не сжимайте и не кодируйте diff.
 
-Прежде чем отправить сообщение об ошибке, ознакомьтесь с разделом extref:{problem-reports}[Написание отчета о проблеме, pr-writing] в статье "Отчеты о проблемах". В нем содержится гораздо больше информации о том, как составлять полезные отчеты о проблемах.
+Прежде чем отправить сообщение об ошибке, ознакомьтесь с разделом extref:{problem-reports}[Написание отчёта о проблеме, pr-writing] в статье "Отчёты о проблемах". В нем содержится гораздо больше информации о том, как составлять полезные отчёты о проблемах.
 
 [IMPORTANT]
 ====
@@ -95,7 +95,7 @@ endif::[]
 [[git-diff]]
 == Использование Git для создания патчей
 
-Когда это возможно, пожалуйста, предоставляйте патч или diff с помощью man:git[1]. Их проще обрабатывать, чем различия между «новым и старым» каталогом. Так легче увидеть, что изменилось, и обновить diff, если что-то было изменено в Коллекции портов с момента начала работы над ней, или если коммиттер просит что-то исправить. Кроме того, патч, созданный с помощью man:git-format-patch[1] или man:git-diff[1], можно легко применить с помощью man:git-am[1] или man:git-apply[1], что сэкономит время коммиттера. Наконец, git-патч, созданный man:git-format-patch[1], включает информацию об авторе и сообщения коммитов. Они будут записаны в лог репозитория, и это рекомендуемый способ отправки ваших изменений.
+Когда это возможно, пожалуйста, предоставляйте патч или diff с помощью man:git[1]. Их проще обрабатывать, чем различия между «новым и старым» каталогом. Так легче увидеть, что изменилось, и обновить diff, если что-то было изменено в Коллекции портов с момента начала работы над ней, или если коммиттер просит что-то исправить. Кроме того, патч, созданный с помощью man:git-format-patch[1] или man:git-diff[1], можно легко применить с помощью man:git-am[1] или man:git-apply[1], что сэкономит время коммиттера. Наконец, git-патч, созданный man:git-format-patch[1], включает информацию об авторе и сообщения коммитов. Они будут записаны в лог репозитория, и это рекомендуемый способ отправки изменений.
 
 [source, shell]
 ....
@@ -120,7 +120,7 @@ endif::[]
 
 Также обновите ссылку на контрольную сумму в distinfo с помощью `make makesum`.
 
-Прежде чем создавать патч, загрузите последнюю версию репозитория и перебазируйте изменения поверх неё. Внимательно следите за выводом и следуйте ему. Если какие-либо файлы не удалось перебазировать, это означает, что исходные файлы изменились во время вашего редактирования, и конфликты необходимо разрешить вручную.
+Прежде чем создавать патч, загрузите последнюю версию репозитория и перебазируйте изменения поверх неё. Внимательно следите за выводом и следуйте ему. Если какие-либо файлы не удалось перебазировать, это означает, что исходные файлы в вышестоящем репозитории изменились во время локального редактирования файла, и конфликты необходимо разрешить вручную.
 
 [source, shell]
 ....
@@ -146,7 +146,7 @@ endif::[]
 % git format-patch main
 ....
 
-Это создаст файл исправления с именем вида `0001-foo.patch`. Это предпочтительный способ, так как он включает идентификацию автора, а также удобнее, когда вы делаете серию изменений, которые не должны объединяться вместе.
+Это создаст файл исправления с именем вида `0001-foo.patch`. Это предпочтительный способ, так как он включает идентификацию автора, а также удобнее, когда делаются серии изменений, которые не должны объединяться вместе.
 
 Или для создания унифицированного diff с помощью man:git-diff[1]:
 [source, shell]
@@ -155,13 +155,13 @@ endif::[]
 ....
 Это создаст файл с различиями с именем вида `foo-1.2.3.diff`. Здесь `foo` заменяется на первую строку сообщения коммита, то есть на тему сообщения коммита.
 
-После создания патча вы можете переключиться на основную ветку для начала других разработок.
+После создания патча можно переключиться на основную ветку для начала других разработок.
 [source, shell]
 ....
 % git checkout main
 ....
 
-После принятия и слияния патча вы можете удалить локальную ветку разработки, если хотите:
+После принятия и слияния патча удалите локальную ветку разработки, если хотите:
 [source, shell]
 ....
 % git branch -D my_branch
@@ -172,7 +172,7 @@ endif::[]
 Если файлы были добавлены, перемещены или удалены, укажите использованные команды man:git[1] `add`, `mv` и `rm`. Команда `git mv` должна быть выполнена до применения патча. Команды `git add` или `git rm` должны быть выполнены после применения патча.
 ====
 
-Отправьте исправление, следуя extref:{problem-reports}[рекомендациям по отправке отчетов о проблемах, pr-writing].
+Отправьте исправление, следуя extref:{problem-reports}[рекомендациям по отправке отчётов о проблемах, pr-writing].
 
 [[moved-and-updating-files]]
 == UPDATING и MOVED
@@ -186,7 +186,7 @@ endif::[]
 ....
 YYYYMMDD:
   AFFECTS: users of portcategory/portname
-  AUTHOR: Your name <Your email address>
+  AUTHOR: the name <the email address>
 
   Special instructions
 ....
