--- a/documentation/content/ru/books/porters-handbook/upgrading/_index.po
+++ b/documentation/content/ru/books/porters-handbook/upgrading/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-21 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksporters-handbookupgrading_index/ru/>\n"
@@ -57,17 +57,17 @@ msgid ""
 msgstr ""
 "При работе с большим количеством портов, вероятно, будет проще использовать "
 "Git для поддержания всей коллекции портов в актуальном состоянии, как "
-"описано в extref:{handbook}ports[Использование коллекции портов, ports-using]"
-". Это также позволит отслеживать все зависимости портов."
+"описано в extref:{handbook}ports[Использование коллекции портов, ports-"
+"using]. Это также позволит отслеживать все зависимости портов."
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:62
 msgid ""
 "The next step is to see if there is an update already pending.  To do this, "
-"there are two options.  There is a searchable interface to the https://"
-"bugs.freebsd.org/search/[FreeBSD Problem Report (PR) or bug database].  "
-"Select `Ports & Packages` in the `Product` multiple select menu, and enter "
-"the name of the port in the `Summary` field."
+"there are two options.  There is a searchable interface to the https://bugs."
+"freebsd.org/search/[FreeBSD Problem Report (PR) or bug database].  Select "
+"`Ports & Packages` in the `Product` multiple select menu, and enter the name "
+"of the port in the `Summary` field."
 msgstr ""
 "Следующий шаг — проверить, есть ли уже ожидающее обновление. Для этого есть "
 "два варианта. Доступен поиск в https://bugs.freebsd.org/search/[Сообщения о "
@@ -99,9 +99,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:68
 msgid ""
-"If the maintainer asks you to do the upgrade or there is no maintainer, then "
-"help out FreeBSD by preparing the update! Please do this by using the "
-"man:diff[1] command in the base system."
+"If the maintainer requests to do the upgrade or there is no maintainer, then "
+"help out FreeBSD by preparing the update! Please do this by using the man:"
+"diff[1] command in the base system."
 msgstr ""
 "Если сопровождающий просит вас выполнить обновление, либо сопровождающий "
 "отсутствует, то у вас появляется шанс помочь FreeBSD, приготовив обновление "
@@ -112,12 +112,12 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:70
 msgid ""
 "To create a suitable `diff` for a single patch, copy the file that needs "
-"patching to [.filename]#something.orig#, save the changes to "
-"[.filename]#something# and then create the patch:"
+"patching to [.filename]#something.orig#, save the changes to [."
+"filename]#something# and then create the patch:"
 msgstr ""
 "Чтобы создать подходящий `diff` для одного патча, скопируйте файл, который "
-"нужно пропатчить, в [.filename]#something.orig#, сохраните ваши изменения в ["
-".filename]#something#, а затем создайте ваше патч:"
+"нужно пропатчить, в [.filename]#something.orig#, сохраните ваши изменения в "
+"[.filename]#something#, а затем создайте ваше патч:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:74
@@ -133,8 +133,8 @@ msgid ""
 "different directory and use the result of the recursive man:diff[1] output "
 "of the new and old ports directories (for example, if the modified port "
 "directory is called [.filename]#superedit# and the original is in our tree "
-"as [.filename]#superedit.bak#, then save the result of `diff -ruN "
-"superedit.bak superedit`).  Either unified or context diff is fine, but port "
+"as [.filename]#superedit.bak#, then save the result of `diff -ruN superedit."
+"bak superedit`).  Either unified or context diff is fine, but port "
 "committers generally prefer unified diffs.  Note the use of the `-N` option-"
 "this is the accepted way to force diff to properly deal with the case of new "
 "files being added or old files being deleted.  Before sending us the diff, "
@@ -185,19 +185,19 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:94
 msgid ""
-"If the port is unmaintained, and you are actively using it, please consider "
+"If the port is unmaintained, and it is actively being used, please consider "
 "volunteering to become its maintainer.  FreeBSD has over 4000 ports without "
 "maintainers, and this is an area where more volunteers are always needed.  "
 "(For a detailed description of the responsibilities of maintainers, refer to "
-"the section in the extref:{developers-handbook}[Developer's Handbook, "
-"POLICIES-MAINTAINER].)"
+"the section in the extref:{developers-handbook}policies[Developer's "
+"Handbook, policies-maintainer].)"
 msgstr ""
-"Если порт никем не поддерживается, а вы активно его используете, пожалуйста, "
+"Если порт никем не поддерживается и активно используется, пожалуйста, "
 "подумайте над тем, чтобы добровольно стать его сопровождающим. Во FreeBSD "
 "имеется более 4000 портов без поддержки, и это как раз та область, где "
 "всегда нужны добровольцы. (Детальное описание обязанностей сопровождающего "
-"можно найти в разделе extref:{developers-handbook}[Руководства Разработчика, "
-"POLICIES-MAINTAINER].)"
+"можно найти в разделе extref:{developers-handbook}policies[Руководства "
+"Разработчика, policies-maintainer].)"
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:100
@@ -211,12 +211,13 @@ msgid ""
 "man:git[1] when doing a commit.  Do not compress or encode the diff."
 msgstr ""
 "Для отправки diff используйте https://bugs.freebsd.org/submit/[форму "
-"отправки багов] (продукт `Ports & Packages`, компонент `Individual Port(s)`)"
-". Всегда указывайте категорию с именем порта, за которой следует двоеточие и "
-"краткое описание проблемы. Примеры: `_категория/имя_порта_: _добавить опцию "
-"FOO_`; `_категория/имя_порта_: _Обновление до X.Y_`. Упоминайте в сообщении "
-"все добавленные или удалённые файлы, так как они должны быть явно указаны в "
-"man:git[1] при выполнении коммита. Не сжимайте и не кодируйте diff."
+"отправки багов] (продукт `Ports & Packages`, компонент `Individual "
+"Port(s)`). Всегда указывайте категорию с именем порта, за которой следует "
+"двоеточие и краткое описание проблемы. Примеры: `_категория/имя_порта_: "
+"_добавить опцию FOO_`; `_категория/имя_порта_: _Обновление до X.Y_`. "
+"Упоминайте в сообщении все добавленные или удалённые файлы, так как они "
+"должны быть явно указаны в man:git[1] при выполнении коммита. Не сжимайте и "
+"не кодируйте diff."
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:103
@@ -226,9 +227,9 @@ msgid ""
 "contains far more information about how to write useful problem reports."
 msgstr ""
 "Прежде чем отправить сообщение об ошибке, ознакомьтесь с разделом extref"
-":{problem-reports}[Написание отчета о проблеме, pr-writing] в статье \"Отчеты"
+":{problem-reports}[Написание отчёта о проблеме, pr-writing] в статье \"Отчёты"
 " о проблемах\". В нем содержится гораздо больше информации о том, как "
-"составлять полезные отчеты о проблемах."
+"составлять полезные отчёты о проблемах."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:109
@@ -240,11 +241,11 @@ msgid ""
 "for several weeks."
 msgstr ""
 "Если обновление вызвано соображениями информационной безопасности или "
-"наличием серьёзных ошибок в имеющемся порте, пожалуйста, оповестите {portmgr}"
-" о необходимости немедленного перепостроения и повторного распространения "
-"пакета данного порта. В противном случае ничего не подозревающие "
-"пользователи `pkg` будут продолжать устанавливать старую версию по команде `"
-"pkg install` в течение ещё нескольких недель."
+"наличием серьёзных ошибок в имеющемся порте, пожалуйста, оповестите "
+"{portmgr} о необходимости немедленного перепостроения и повторного "
+"распространения пакета данного порта. В противном случае ничего не "
+"подозревающие пользователи `pkg` будут продолжать устанавливать старую "
+"версию по команде `pkg install` в течение ещё нескольких недель."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:116
@@ -262,8 +263,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:119
 msgid ""
-"Now that all of that is done, read about how to keep up-to-date in "
-"crossref:keeping-up[keeping-up,Keeping Up]."
+"Now that all of that is done, read about how to keep up-to-date in crossref:"
+"keeping-up[keeping-up,Keeping Up]."
 msgstr ""
 "Теперь, когда вы проделали всё это, прочитайте о том, как поддерживать "
 "актуальное состояние, в crossref:keeping-up[keeping-up, Актуализация]."
@@ -284,9 +285,9 @@ msgid ""
 "something to be fixed.  Also, a patch generated with man:git-format-patch[1] "
 "or man:git-diff[1] can be easily applied with man:git-am[1] or man:git-"
 "apply[1] and will save some time for the committer.  Finally, the git patch "
-"generated by man:git-format-patch[1] includes your author information and "
+"generated by man:git-format-patch[1] includes the author information and "
 "commit messages.  These will be recorded in the log of the repository and "
-"this is the recommended way to submit your changes."
+"this is the recommended way to submit the changes."
 msgstr ""
 "Когда это возможно, пожалуйста, предоставляйте патч или diff с помощью "
 "man:git[1]. Их проще обрабатывать, чем различия между «новым и старым» "
@@ -297,7 +298,7 @@ msgstr ""
 ":git-am[1] или man:git-apply[1], что сэкономит время коммиттера. Наконец, "
 "git-патч, созданный man:git-format-patch[1], включает информацию об авторе и "
 "сообщения коммитов. Они будут записаны в лог репозитория, и это "
-"рекомендуемый способ отправки ваших изменений."
+"рекомендуемый способ отправки изменений."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:135
@@ -312,8 +313,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:138
 msgid ""
-"This can be anywhere, of course. Building ports is not limited to within "
-"[.filename]#/usr/ports/#."
+"This can be anywhere, of course. Building ports is not limited to within [."
+"filename]#/usr/ports/#."
 msgstr ""
 "Это может быть где угодно; место, в котором производится построение портов, "
 "не привязано к [.filename]#/usr/ports/#."
@@ -374,14 +375,15 @@ msgstr ""
 msgid ""
 "Before making the patch, fetch the latest repository and rebase the changes "
 "on top of it.  Watch and follow the output carefully.  If any of the files "
-"failed to rebase, it means that the upstream files changed while you were "
-"editing the same file, and the conflicts need to be resolved manually."
+"failed to rebase, it means that the upstream files changed while local "
+"changes happened in the same file, and the conflicts need to be resolved "
+"manually."
 msgstr ""
 "Прежде чем создавать патч, загрузите последнюю версию репозитория и "
 "перебазируйте изменения поверх неё. Внимательно следите за выводом и "
 "следуйте ему. Если какие-либо файлы не удалось перебазировать, это означает, "
-"что исходные файлы изменились во время вашего редактирования, и конфликты "
-"необходимо разрешить вручную."
+"что исходные файлы в вышестоящем репозитории изменились во время локального "
+"редактирования файла, и конфликты необходимо разрешить вручную."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:163
@@ -435,12 +437,11 @@ msgstr ""
 msgid ""
 "This will generate a patch named like `0001-foo.patch`.  This is the "
 "preferred way as it would include author identity, and it is also easier "
-"when you are making a series of changes that are not meant to be squashed "
-"together."
+"when making a series of changes that are not meant to be squashed together."
 msgstr ""
 "Это создаст файл исправления с именем вида `0001-foo.patch`. Это "
 "предпочтительный способ, так как он включает идентификацию автора, а также "
-"удобнее, когда вы делаете серию изменений, которые не должны объединяться "
+"удобнее, когда делаются серии изменений, которые не должны объединяться "
 "вместе."
 
 #. type: Plain text
@@ -468,11 +469,11 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:197
 msgid ""
-"After patch has been created, you can switch to the main branch for starting "
-"other developments."
+"After patch has been created, switch to the main branch for starting other "
+"developments."
 msgstr ""
-"После создания патча вы можете переключиться на основную ветку для начала "
-"других разработок."
+"После создания патча можно переключиться на основную ветку для начала других "
+"разработок."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:200
@@ -483,11 +484,11 @@ msgstr "% git checkout main\n"
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:203
 msgid ""
-"Once the patch is accepted and merged, you can delete the local development "
-"branch if you want:"
+"Once the patch is accepted and merged, delete the local development branch "
+"if desired:"
 msgstr ""
-"После принятия и слияния патча вы можете удалить локальную ветку разработки, "
-"если хотите:"
+"После принятия и слияния патча удалите локальную ветку разработки, если "
+"хотите:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:206
@@ -515,7 +516,7 @@ msgid ""
 "submission guidelines, pr-writing]."
 msgstr ""
 "Отправьте исправление, следуя extref:{problem-reports}[рекомендациям по "
-"отправке отчетов о проблемах, pr-writing]."
+"отправке отчётов о проблемах, pr-writing]."
 
 #. type: Title ==
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:218
@@ -546,11 +547,11 @@ msgstr ""
 msgid ""
 "YYYYMMDD:\n"
 "  AFFECTS: users of portcategory/portname\n"
-"  AUTHOR: Your name <Your email address>\n"
+"  AUTHOR: the name <the email address>\n"
 msgstr ""
 "YYYYMMDD:\n"
 "  AFFECTS: users of portcategory/portname\n"
-"  AUTHOR: Your name <Your email address>\n"
+"  AUTHOR: the name <the email address>\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:233
@@ -571,8 +572,7 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:244
 #, no-wrap
 msgid "# pkg delete -g -f docbook-xml* docbook-sk* docbook[2345]??-* docbook-4*\n"
-msgstr ""
-"# pkg delete -g -f docbook-xml* docbook-sk* docbook[2345]??-* docbook-4*\n"
+msgstr "# pkg delete -g -f docbook-xml* docbook-sk* docbook[2345]??-* docbook-4*\n"
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:248
@@ -588,9 +588,7 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:252
 #, no-wrap
 msgid "# pkg delete -g -f docbook-xml\\* docbook-sk\\* docbook\\[2345\\]\\?\\?-\\* docbook-4\\*\n"
-msgstr ""
-"# pkg delete -g -f docbook-xml\\* docbook-sk\\* docbook\\[2345\\]\\?\\?-\\* "
-"docbook-4\\*\n"
+msgstr "# pkg delete -g -f docbook-xml\\* docbook-sk\\* docbook\\[2345\\]\\?\\?-\\* docbook-4\\*\n"
 
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:260
