--- a/documentation/content/ru/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/uses/_index.adoc
@@ -162,7 +162,7 @@ RUN_DEPENDS с портом Ansible.
 Путь к каталогу etc Ansible.
 
 `ANSIBLE_PLUGINS_PREFIX`::
-Путь к директории "plugins" в `${ANSIBLE_DATADIR}`.
+Путь к каталогу "plugins" в `${ANSIBLE_DATADIR}`.
 `ANSIBLE_MODULESDIR`::
 Путь к каталогу для локальных модулей Ansible.
 
@@ -322,7 +322,7 @@ package:databases/db48[] устарел и не поддерживается. О
 Если `opt` включён, добавить значение к `${CABAL_FLAGS}`. В противном случае добавить `-value`, чтобы отключить флаг. Обратите внимание, что это поведение немного отличается от простого `CABAL_FLAGS`, так как оно не принимает значения, начинающиеся с `-`.
 
 `CABAL_WRAPPER_SCRIPTS`::
-Подмножество `${CABAL_EXECUTABLES}`, содержащее программы на Haskell, которые будут обёрнуты в shell-скрипт, устанавливающий переменные окружения `*_datadir` перед запуском программы. Это также приводит к тому, что фактический бинарный файл Haskell устанавливается в директорию `libexec/cabal/`. Данная настройка необходима для программ на Haskell, которые устанавливают свои файлы данных в директорию `share/`.
+Подмножество `${CABAL_EXECUTABLES}`, содержащее программы на Haskell, которые будут обёрнуты в shell-скрипт, устанавливающий переменные окружения `*_datadir` перед запуском программы. Это также приводит к тому, что фактический бинарный файл Haskell устанавливается в каталог `libexec/cabal/`. Данная настройка необходима для программ на Haskell, которые устанавливают свои файлы данных в каталог `share/`.
 
 `FOO_DATADIR_VARS`::
 Список дополнительных пакетов Haskell, чьи файлы данных должны быть доступны исполняемому файлу с именем `FOO`. Исполняемый файл должен быть частью `${CABAL_WRAPPER_SCRIPTS}`. Указанные пакеты Haskell не должны иметь суффикса версии.
@@ -573,7 +573,7 @@ ELF_FEATURES=	featurelist:path/to/file1 \
 `ELIXIR_LIB_ROOT`::
 Путь к библиотекам Elixir по умолчанию
 `ELIXIR_APP_ROOT`::
-Корневая директория для этого приложения Elixir
+Корневой каталог для этого приложения Elixir
 `ELIXIR_HIDDEN`::
 Приложения, которые необходимо скрыть из пути выполнения кода; обычно `${PORTNAME}`
 `ELIXIR_LOCALE`::
@@ -1319,7 +1319,7 @@ GSSAPI_NONE_CONFIGURE_ON=	--without-gssapi
 Список lpi-файлов. Он не должен быть пустым. По умолчанию: пусто
 
 `LAZARUS_DIR`::
-Путь к директории установки lazarus. По умолчанию: [.filename]#${LOCALBASE}/share/lazarus-${LAZARUS_VER}#
+Путь к каталогу установки lazarus. По умолчанию: [.filename]#${LOCALBASE}/share/lazarus-${LAZARUS_VER}#
 
 `LAZBUILD_ARGS`::
 Дополнительные аргументы lazbuild. В большинстве случаев это может быть `-d`. Подробнее см. man:lazbuild[1]. По умолчанию: пусто
@@ -1577,9 +1577,11 @@ USE_MATE=	menus:build intlhack
 [[uses-meson]]
 == `meson`
 
-Возможные аргументы: (отсутствуют)
+Возможные аргументы: (нет), `muon `
 
 Предоставить поддержку для проектов на основе Meson. Дополнительную информацию смотрите в crossref:special[using-meson,Использование `meson`].
+
+Если указан аргумент `muon`, в порт добавляется зависимость от package:devel/muon[].
 
 [[uses-metaport]]
 == `metaport`
@@ -1723,11 +1725,11 @@ USE_MATE=	menus:build intlhack
 
 Если указан аргумент `dune`, то package:devel/ocaml-dune[] используется как система сборки.
 
-Если указан аргумент `findlib`, то для установки пакетов будет использоваться `ocamlfind`. Директории пакетов будут автоматически удалены.
+Если указан аргумент `findlib`, то для установки пакетов будет использоваться `ocamlfind`. Каталоги пакетов будут автоматически удалены.
 
 Если указан аргумент `findplist`, то содержимое целевых каталогов `findlib` будет добавлено автоматически.
 
-Если указан аргумент `ldconfig`, то файл [.filename]#ld.conf# OCaml будет обработан автоматически. При использовании `dune` Dune может устанавливать stublibs в директориях пакетов site-lib или в отдельной директории ниже `DUNE_LIBDIR` site-lib. Установите, если ваш порт устанавливает общие библиотеки в ocaml
+Если указан аргумент `ldconfig`, то файл [.filename]#ld.conf# OCaml будет обработан автоматически. При использовании `dune` Dune может устанавливать stublibs в каталог(-и) пакетов site-lib или в отдельный каталог ниже каталога `DUNE_LIBDIR` site-lib. Установите, если порт устанавливает общие библиотеки в ocaml
 
 Если указан аргумент `run`, добавить ocamlc в `RUN_DEPENDS`.
 
