--- a/documentation/content/ru/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/versions/_index.adoc
@@ -49,6 +49,40 @@ endif::[]
 
 Здесь удобный список значений `__FreeBSD_version` как определено в https://cgit.freebsd.org/src/tree/sys/sys/param.h[sys/param.h]:
 
+[[versions-16]]
+== Версии FreeBSD 16
+
+[[freebsd-versions-table-16]]
+.Значения `__FreeBSD_version` в FreeBSD 16
+[cols="1,1,1,1", frame="none", options="header"]
+|===
+| Значение
+| Версия
+| Дата
+| Релиз
+
+|1600000
+|gitref:8b4e4c2737305df8807abc6cd054a32586085c93[repository="src",length=12]
+|4 сентября 2025
+|16.0-CURRENT.
+
+|1600001
+|gitref:52ce810302f70cc7b995651eb1b19adfa014b351[repository="src",length=12]
+|29 сентября 2025
+|16.0-CURRENT после изменений в LinuxKPI PCI.
+
+|1600002
+|gitref:37ad1beaf516854d5e59b90a9706b09d02cc2a81[repository="src",length=12]
+|20 октября 2025
+|16.0-CURRENT после изменений размера встроенной структуры LinuxKPI.
+
+|1600003
+|gitref:7eb213614b90cde31707a53c4b8ae6acacf2aa0f[repository="src",length=12]
+|30 октября 2025
+|16.0-CURRENT после изменения API `bus_alloc_resource`, чтобы передавать параметр `rid` по значению.
+
+|===
+
 [[versions-15]]
 == Версии FreeBSD 15
 
@@ -245,6 +279,11 @@ endif::[]
 |gitref:567e6250c003eeb251b4bc8dbe60d2adabab2988[repository="src",length=12]
 |17 августа 2025
 |15.0-CURRENT после добавления VTYPE_ISDEV(), VN_ISDEV() и VATTR_ISDEV().
+
+|1500063
+|gitref:c340ef28fd384b567e35882d04ce17fa31b7384f[repository="src",length=12]
+|18 августа 2025
+|15.0-CURRENT после переписывания certctl, который теперь производит bundle.
 
 |===
 
@@ -956,7 +995,7 @@ Template:
 |1300030
 |link:https://svnweb.freebsd.org/changeset/base/348350[348350]
 |29 мая 2019
-|13.0-CURRENT после добавления поддержки перемещения в libdwarf на powerpc64 для исправления обработки DWARF-информации в несвязанных объектах. Оригинальный коммит в ссылке:https://svnweb.freebsd.org/changeset/base/348347[348347].
+|13.0-CURRENT после добавления поддержки перемещения в libdwarf на powerpc64 для исправления обработки DWARF-информации в несвязанных объектах. Оригинальный коммит по ссылке link:https://svnweb.freebsd.org/changeset/base/348347[348347].
 
 |1300031
 |link:https://svnweb.freebsd.org/changeset/base/348808[348808]
