--- a/documentation/content/ru/books/porters-handbook/order/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/order/_index.adoc
@@ -181,7 +181,7 @@ endif::[]
 
 Этот блок раздела предназначен для переменных, которые могут быть определены в [.filename]#bsd.port.mk# и не принадлежат ни к одному из предыдущих блоков разделов.
 
-Порядок не важен, однако старайтесь держать схожие переменные вместе. Например, переменные uid и gid `USERS` и `GROUPS`. Конфигурационные переменные `CONFIGURE_*` и `*_CONFIGURE`. Списки файлов и директорий `PORTDOCS` и `PORTEXAMPLES`.
+Порядок не важен, однако старайтесь держать схожие переменные вместе. Например, переменные uid и gid `USERS` и `GROUPS`. Конфигурационные переменные `CONFIGURE_*` и `*_CONFIGURE`. Списки файлов и каталогов `PORTDOCS` и `PORTEXAMPLES`.
 
 [[porting-order-options]]
 == Параметры и помощники
